Bug 237360 - Plasma crashed after resuming from hibernation
Summary: Plasma crashed after resuming from hibernation
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 238521 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-12 11:24 UTC by Davide Castellone
Modified: 2010-12-27 12:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (14.09 KB, text/plain)
2010-06-25 09:31 UTC, Florian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Castellone 2010-05-12 11:24:27 UTC
Application: plasma-desktop (0.3)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-21-generic-tuxonice i686
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
It happened some seconds after unlocking the screen. It is probably related to the fact that I was connected to a wireless network when I hibernated.

 -- Backtrace:
Application: Spazio di lavoro di Plasma (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb78b6aa0 (LWP 1512))]

Thread 5 (Thread 0xaa519b70 (LWP 4650)):
#0  0x00fb7422 in __kernel_vsyscall ()
#1  0x00b1e015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x008e5287 in QWaitConditionPrivate::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x08518870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9bad928, th=0xb0cd890) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0851b38c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9bc48d8, th=0xb0cd890) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0851727b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9bad928, th=0xb0cd890) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0851b482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9bc48d8, th=0xb0cd890) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x085184d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9bad928, th=0xb0cd890, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0851951e in ThreadWeaver::ThreadRunHelper::run (this=0xaa5192f4, parent=0x9bad928, th=0xb0cd890) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x08519c3b in ThreadWeaver::Thread::run (this=0xb0cd890) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x008e432e in QThreadPrivate::start (arg=0xb0cd890) at thread/qthread_unix.cpp:248
#12 0x00b1996e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#13 0x006b7a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 4 (Thread 0xa9172b70 (LWP 4651)):
#0  0x00fb7422 in __kernel_vsyscall ()
#1  0x00b1e015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x008e5287 in QWaitConditionPrivate::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x08518870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9bad928, th=0xabcd250) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0851b38c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9bc48d8, th=0xabcd250) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0851727b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9bad928, th=0xabcd250) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0851b482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9bc48d8, th=0xabcd250) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x085184d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9bad928, th=0xabcd250, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0851951e in ThreadWeaver::ThreadRunHelper::run (this=0xa91722f4, parent=0x9bad928, th=0xabcd250) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x08519c3b in ThreadWeaver::Thread::run (this=0xabcd250) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x008e432e in QThreadPrivate::start (arg=0xabcd250) at thread/qthread_unix.cpp:248
#12 0x00b1996e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#13 0x006b7a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 3 (Thread 0xa4f8bb70 (LWP 4652)):
#0  0x00fb7422 in __kernel_vsyscall ()
#1  0x00b1e015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x008e5287 in QWaitConditionPrivate::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x08518870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9bad928, th=0xaf324e8) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0851b38c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9bc48d8, th=0xaf324e8) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0851727b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9bad928, th=0xaf324e8) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0851b482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9bc48d8, th=0xaf324e8) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x085184d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9bad928, th=0xaf324e8, previous=0xb2dc758) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0851951e in ThreadWeaver::ThreadRunHelper::run (this=0xa4f8b2f4, parent=0x9bad928, th=0xaf324e8) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x08519c3b in ThreadWeaver::Thread::run (this=0xaf324e8) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x008e432e in QThreadPrivate::start (arg=0xaf324e8) at thread/qthread_unix.cpp:248
#12 0x00b1996e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#13 0x006b7a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xa478ab70 (LWP 4653)):
#0  0x00fb7422 in __kernel_vsyscall ()
#1  0x00b1e015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x008e5287 in QWaitConditionPrivate::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9bad940, mutex=0x9bad2d0, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x08518870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9bad928, th=0xa2c63f0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x0851b38c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9bc48d8, th=0xa2c63f0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x0851727b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9bad928, th=0xa2c63f0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x0851b482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9bc48d8, th=0xa2c63f0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x085184d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9bad928, th=0xa2c63f0, previous=0xa7011e0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x0851951e in ThreadWeaver::ThreadRunHelper::run (this=0xa478a2f4, parent=0x9bad928, th=0xa2c63f0) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x08519c3b in ThreadWeaver::Thread::run (this=0xa2c63f0) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x008e432e in QThreadPrivate::start (arg=0xa2c63f0) at thread/qthread_unix.cpp:248
#12 0x00b1996e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#13 0x006b7a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb78b6aa0 (LWP 1512)):
[KCrash Handler]
#6  QDBusAbstractInterface::asyncCallWithArgumentList (this=0xac28c00, method=..., args=...) at qdbusabstractinterface.cpp:466
#7  0x07183cee in InterfaceConnectionInterface::activationState (this=0xa6e0ec0) at ./interfaceconnectioninterface.h:66
#8  RemoteInterfaceConnection::activationState (this=0xa6e0ec0) at ../../../libs/client/remoteinterfaceconnection.cpp:79
#9  0x02d8d0a9 in InterfaceItem::currentConnection (this=0xa250588) at ../../applet/interfaceitem.cpp:258
#10 0x02d8fd2f in WirelessInterfaceItem::setConnectionInfo (this=0xa250588) at ../../applet/wirelessinterfaceitem.cpp:74
#11 0x02d8fcc4 in WirelessInterfaceItem::updateInfo (this=0xa250588) at ../../applet/wirelessinterfaceitem.cpp:54
#12 0x02d831e1 in WirelessInterfaceItem::qt_metacall (this=0xa250588, _c=QMetaObject::InvokeMetaMethod, _id=45, _a=0xbfb52ae8) at moc_wirelessinterfaceitem.cpp:74
#13 0x009ebc9a in QMetaObject::metacall (object=0xa250588, cl=119071085, idx=45, argv=0xbfb52ae8) at kernel/qmetaobject.cpp:237
#14 0x009fa3d5 in QMetaObject::activate (sender=0xa1dac28, m=0x2d99a50, local_signal_index=0, argv=0xbfb52ae8) at kernel/qobject.cpp:3293
#15 0x02d81fd3 in WirelessStatus::strengthChanged (this=0xa1dac28, _t1=0) at moc_wirelessstatus.cpp:94
#16 0x02d94154 in WirelessStatus::setStrength (this=0xa1dac28, strength=-1078646560) at ../../applet/wirelessstatus.cpp:181
#17 0x02d944e7 in WirelessStatus::accessPointDestroyed (this=0xa1dac28, ap=0xbfb528e0) at ../../applet/wirelessstatus.cpp:215
#18 0x02d82431 in WirelessStatus::qt_metacall (this=0xa1dac28, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbfb52ca8) at moc_wirelessstatus.cpp:82
#19 0x009ebc9a in QMetaObject::metacall (object=0xa1dac28, cl=119071085, idx=7, argv=0xbfb52ca8) at kernel/qmetaobject.cpp:237
#20 0x009fa3d5 in QMetaObject::activate (sender=0xa8066d8, m=0xaf5250, local_signal_index=0, argv=0xbfb52ca8) at kernel/qobject.cpp:3293
#21 0x009fa7d3 in QObject::destroyed (this=0xa8066d8, _t1=0xa8066d8) at .moc/release-shared/moc_qobject.cpp:149
#22 0x009fcf9a in ~QObject (this=0xa8066d8, __in_chrg=<value optimized out>) at kernel/qobject.cpp:869
#23 0x02cbaf9c in ~AccessPoint (this=0xa8066d8, __in_chrg=<value optimized out>) at ../../../../libs/solid/control/wirelessaccesspoint.cpp:72
#24 0x02cbc95e in Solid::Control::WirelessNetworkInterface::_k_accessPointRemoved (this=0x9a7aef8, uni=...) at ../../../../libs/solid/control/wirelessnetworkinterface.cpp:163
#25 0x02cbca2d in Solid::Control::WirelessNetworkInterface::qt_metacall (this=0x9a7aef8, _c=QMetaObject::InvokeMetaMethod, _id=14, _a=0xbfb52e88) at ./wirelessnetworkinterface.moc:116
#26 0x009ebc9a in QMetaObject::metacall (object=0x9a7aef8, cl=119071085, idx=14, argv=0xbfb52e88) at kernel/qmetaobject.cpp:237
#27 0x009fa3d5 in QMetaObject::activate (sender=0x9a573e0, m=0x2e5c5c8, local_signal_index=4, argv=0xbfb52e88) at kernel/qobject.cpp:3293
#28 0x02e40a53 in NMWirelessNetworkInterface::accessPointDisappeared (this=0x9a573e0, _t1=...) at moc_wirelessnetworkinterface.cpp:140
#29 0x02e4f105 in NMWirelessNetworkInterface::accessPointRemoved (this=0x9a573e0, apPath=...) at ../../../solid/networkmanager-0.7/wirelessnetworkinterface.cpp:188
#30 0x02e40c4d in NMWirelessNetworkInterface::qt_metacall (this=0x9a573e0, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0xbfb53028) at moc_wirelessnetworkinterface.cpp:100
#31 0x009ebc9a in QMetaObject::metacall (object=0x9a573e0, cl=119071085, idx=15, argv=0xbfb53028) at kernel/qmetaobject.cpp:237
#32 0x009fa3d5 in QMetaObject::activate (sender=0x9a86320, m=0x2e5dc04, local_signal_index=1, argv=0xbfb53028) at kernel/qobject.cpp:3293
#33 0x02e55793 in OrgFreedesktopNetworkManagerDeviceWirelessInterface::AccessPointRemoved (this=0x9a86320, _t1=...) at ./nm-device-wifiinterface.moc:141
#34 0x02e55a1d in OrgFreedesktopNetworkManagerDeviceWirelessInterface::qt_metacall (this=0x9a86320, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfb531fc) at ./nm-device-wifiinterface.moc:92
#35 0x00de7b34 in QDBusConnectionPrivate::deliverCall (this=0x975a498, object=0x9a86320, msg=..., metaTypes=..., slotIdx=6) at qdbusintegrator.cpp:904
#36 0x00df2ea7 in QDBusCallDeliveryEvent::placeMetaCall (this=0xafb2cd0, object=0x9a86320) at qdbusintegrator_p.h:101
#37 0x009f73fe in QObject::event (this=0x9a86320, e=0xafb2cd0) at kernel/qobject.cpp:1248
#38 0x0397f4dc in QApplicationPrivate::notify_helper (this=0x9584500, receiver=0x9a86320, e=0xafb2cd0) at kernel/qapplication.cpp:4300
#39 0x0398605e in QApplication::notify (this=0x957e460, receiver=0x9a86320, e=0xafb2cd0) at kernel/qapplication.cpp:3704
#40 0x01197f2a in KApplication::notify (this=0x957e460, receiver=0x9a86320, event=0xafb2cd0) at ../../kdeui/kernel/kapplication.cpp:302
#41 0x009e6a3b in QCoreApplication::notifyInternal (this=0x957e460, receiver=0x9a86320, event=0xafb2cd0) at kernel/qcoreapplication.cpp:704
#42 0x009e9473 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x9534fc8) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#43 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9534fc8) at kernel/qcoreapplication.cpp:1345
#44 0x009e95dd in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1238
#45 0x00a12adf in QCoreApplication::sendPostedEvents (s=0x9586510) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#46 postEventSourceDispatch (s=0x9586510) at kernel/qeventdispatcher_glib.cpp:276
#47 0x06e2a5e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#48 0x06e2e2d8 in ?? () from /lib/libglib-2.0.so.0
#49 0x06e2e4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#50 0x00a125d5 in QEventDispatcherGlib::processEvents (this=0x95843a8, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#51 0x03a3f135 in QGuiEventDispatcherGlib::processEvents (this=0x95843a8, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#52 0x009e5059 in QEventLoop::processEvents (this=0xbfb53a24, flags=) at kernel/qeventloop.cpp:149
#53 0x009e54aa in QEventLoop::exec (this=0xbfb53a24, flags=...) at kernel/qeventloop.cpp:201
#54 0x009e969f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#55 0x0397f577 in QApplication::exec () at kernel/qapplication.cpp:3579
#56 0x080b605e in kdemain (argc=1, argv=0x9570d88) at ../../../../plasma/desktop/shell/main.cpp:112
#57 0x0804e133 in launch (argc=<value optimized out>, _name=<value optimized out>, args=<value optimized out>, cwd=0x0, envc=0, envs=0x954a068 "", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x8051465 "0") at ../../kinit/kinit.cpp:717
#58 0x0804ec6d in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at ../../kinit/kinit.cpp:1209
#59 0x0804f190 in handle_requests (waitForPid=<value optimized out>) at ../../kinit/kinit.cpp:1402
#60 0x0804fe4f in main (argc=4, argv=0xbfb544d4, envp=0xbfb544e8) at ../../kinit/kinit.cpp:1845

Reported using DrKonqi
Comment 1 Sebastian Kügler 2010-05-12 11:44:46 UTC
Which version of the networkmanagement plasmoid are you using? We've not released it, so it can be any snapshot, and I don't know if this crasher is fixed yet. Also, we've been having a lot of people with outdated versions around, making bughunting impossible.

In fact, I've just fixed this particular crasher some time ago, so please upgrade and try to reproduce the crash. Re-open this bug if you still encounter it.
Comment 2 Sebastian Kügler 2010-05-13 19:22:27 UTC
SVN commit 1126331 by sebas:

Fix crash with connections that have gone away

Update the connection info here as well, we might otherwise run into
dead connections

BUG:237360

 M  +2 -0      interfaceitem.cpp  
 M  +4 -0      wirelessinterfaceitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1126331
Comment 3 Jonathan Thomas 2010-05-26 05:55:54 UTC
*** Bug 238521 has been marked as a duplicate of this bug. ***
Comment 4 Florian 2010-06-25 09:31:46 UTC
Created attachment 48308 [details]
New crash information added by DrKonqi

Resumed from hibernation (suspend to RAM)
Comment 5 niburu1 2010-12-27 12:23:53 UTC
I'm observing what seems to be this very bug in Kubuntu 10.10 running KDE 4.6 RC and the network management widget.