Fix crash with connections that have gone away

Update the connection info here as well, we might otherwise run into
dead connections

BUG:237360